--- a/EchoesOfDiscordiaGamified/EchoesOfDiscordia.html
+++ b/EchoesOfDiscordiaGamified/EchoesOfDiscordia.html
@@ -18,7 +18,7 @@
     <dialog type="splash" open>
       <img id="FudgeStoryLogo" theme="light" /> <!-- use "light" or "dark" -->
       <p>
-        Design your splash screen here. Reposition and rescale the logo above, but do not remove.
+        Klick on the screen to start.
       </p>
     </dialog>
 
